--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.google.ticketo"
@@ -41,6 +46,8 @@ dependencies {
     //FIREBASE
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
+    implementation 'com.google.firebase:firebase-database:18.0.1'
+    implementation 'com.google.firebase:firebase-firestore:20.1.0'
     //FIREBASE
 
     //NAVIGATION
@@ -51,6 +58,18 @@ dependencies {
     //FACEBOOK_LOGIN
     implementation 'com.facebook.android:facebook-login:[`5,6)'
     //FACEBOOK_LOGIN
+
+    //MATRIAL DESIGN
+    implementation "com.google.android.material:material:1.1.0-alpha08"
+    //MATRIAL DESIGN
+
+    //RETROFIT AND RX JAVA
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
+    implementation "com.squareup.okhttp3:okhttp:4.0.1"
+    //RETROFIT AND RX JAVA
 }
 
 //FIREBASE
