--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,9 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity
-                android:name=".LoginActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:label="@string/title_activity_login"
-                android:theme="@style/AppTheme">
+        <activity android:name=".ui.login.LoginActivity">
         </activity>
+
         <activity
                 android:name=".MainActivity"
                 android:theme="@style/SplashScreenTheme">
