--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,10 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
     implementation "com.squareup.okhttp3:okhttp:4.0.1"
     //RETROFIT AND RX JAVA
+
+    //GLIDE
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    //GLIDE
 }
 
 //FIREBASE
