--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     //GLIDE
 
+    //ROOM
+    implementation "androidx.room:room-runtime:2.2.0-beta01"
+    kapt "androidx.room:room-compiler:2.2.0-beta01"
+    //ROOM
 }
 
 //FIREBASE
