--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     //FACEBOOK_LOGIN
 
     //MATRIAL DESIGN
-    implementation "com.google.android.material:material:1.1.0-alpha08"
+    implementation "com.google.android.material:material:1.1.0-alpha09"
     //MATRIAL DESIGN
 
     //RETROFIT AND RX JAVA
@@ -81,6 +81,7 @@ dependencies {
 
     //ROOM
     implementation "androidx.room:room-runtime:2.2.0-beta01"
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     kapt "androidx.room:room-compiler:2.2.0-beta01"
     //ROOM
 }
