--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     //GLIDE
 
     //ROOM
-    implementation "androidx.room:room-runtime:2.2.0-beta01"
+    implementation 'androidx.room:room-runtime:2.2.0-beta01'
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
     kapt "androidx.room:room-compiler:2.2.0-beta01"
     //ROOM
